// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`React Wrapper > should be added from mock custom elements JSON 1`] = `
"import * as React from 'react';
import { createComponent, type EventName } from '@lit/react';
import { MockComponent as MockComponentLit } from './index';
import { type MockComponentProps } from './defs';

export * from './defs';

const MockComponentReact = createComponent({
    displayName: 'MockComponent',
    elementClass: MockComponentLit,
    react: React,
    tagName: 'mock-component',
    events: {
        onCustomEvent: 'custom-event' as EventName<CustomEvent>,
        onAnotherCustomEvent: 'another-custom-event' as EventName<CustomEvent>,
    },
});

type MockComponentEvents = {
    onCustomEvent?: (event: CustomEvent) => void;
    onAnotherCustomEvent?: (event: CustomEvent) => void;
};

export const MockComponent = MockComponentReact as React.ForwardRefExoticComponent<React.PropsWithChildren<Omit<React.PropsWithoutRef<MockComponentProps>, 'children'>>
    & React.RefAttributes<MockComponentLit> & MockComponentEvents>;
"
`;

exports[`React Wrapper > should be named the same as the component itself 1`] = `
"import * as React from 'react';
import { createComponent } from '@lit/react';
import { ButtonComponent as ButtonComponentLit } from './index';
import { type ButtonComponentProps } from './defs';

export * from './defs';

const ButtonComponentReact = createComponent({
    displayName: 'ButtonComponent',
    elementClass: ButtonComponentLit,
    react: React,
    tagName: 'mock-component',
    events: {},
});

export const ButtonComponent = ButtonComponentReact as React.ForwardRefExoticComponent<React.PropsWithChildren<Omit<React.PropsWithoutRef<ButtonComponentProps>, 'children'>>
    & React.RefAttributes<ButtonComponentLit>>;
"
`;

exports[`React Wrapper > should generate a controlled-input wrapper for components with a value field and an input event 1`] = `
"import * as React from 'react';
import { createComponent, type EventName } from '@lit/react';
import { PieTextInput as PieTextInputLit } from './index';
import { type TextInputProps } from './defs';

export * from './defs';

const PieTextInputReact = createComponent({
    displayName: 'PieTextInput',
    elementClass: PieTextInputLit,
    react: React,
    tagName: 'pie-text-input',
    events: {
        onInput: 'input' as EventName<InputEvent>,
        onChange: 'change' as EventName<CustomEvent>,
    },
});

type PieTextInputEvents = {
    onInput?: (event: InputEvent) => void;
    onChange?: (event: CustomEvent) => void;
};

type PieTextInputWrapperProps = React.PropsWithChildren<Omit<React.PropsWithoutRef<TextInputProps>, 'children'>>
    & React.RefAttributes<PieTextInputLit> & PieTextInputEvents;

// Use a layout effect on the client (so value writes happen before paint) and a
// regular effect on the server to avoid React's "useLayoutEffect does nothing on
// the server" warning during SSR.
const useIsomorphicPieTextInputLayoutEffect = typeof window !== 'undefined' ? React.useLayoutEffect : React.useEffect;

const PieTextInputControlled = React.forwardRef<PieTextInputLit, PieTextInputWrapperProps>((props, forwardedRef) => {
    const { value, children, ...restProps } = props as PieTextInputWrapperProps & { value?: string | number | null };
    const elementRef = React.useRef<PieTextInputLit | null>(null);
    const lastAppliedValueRef = React.useRef<string | number | null | undefined>(undefined);

    const setElementRef = React.useCallback((node: PieTextInputLit | null) => {
        elementRef.current = node;

        if (typeof forwardedRef === 'function') {
            forwardedRef(node);
        } else if (forwardedRef) {
            (forwardedRef as React.MutableRefObject<PieTextInputLit | null>).current = node;
        }
    }, [forwardedRef]);

    useIsomorphicPieTextInputLayoutEffect(() => {
        const element = elementRef.current;

        if (!element) {
            return;
        }

        // Only write when the controlled value has actually changed since we last
        // applied it. This prevents a re-render carrying an already-applied value
        // from overwriting characters the user has typed in the meantime.
        if (value !== lastAppliedValueRef.current) {
            lastAppliedValueRef.current = value;

            const nextValue = value == null ? '' : String(value);

            if (element.value !== nextValue) {
                element.value = nextValue;
            }
        }
    });

    return React.createElement(
        PieTextInputReact,
        { ...restProps, ref: setElementRef } as unknown as React.ComponentProps<typeof PieTextInputReact>,
        children,
    );
});

PieTextInputControlled.displayName = 'PieTextInput';

export const PieTextInput = PieTextInputControlled as React.ForwardRefExoticComponent<PieTextInputWrapperProps>;
"
`;

exports[`React Wrapper > should leave the events object empty if the component contains no custom events 1`] = `
"import * as React from 'react';
import { createComponent } from '@lit/react';
import { MockComponent as MockComponentLit } from './index';
import { type MockComponentProps } from './defs';

export * from './defs';

const MockComponentReact = createComponent({
    displayName: 'MockComponent',
    elementClass: MockComponentLit,
    react: React,
    tagName: 'mock-component',
    events: {},
});

export const MockComponent = MockComponentReact as React.ForwardRefExoticComponent<React.PropsWithChildren<Omit<React.PropsWithoutRef<MockComponentProps>, 'children'>>
    & React.RefAttributes<MockComponentLit>>;
"
`;

exports[`React Wrapper > should only be added if the component contains custom elements 1`] = `""`;
